--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<h1>ジャンル一覧・追加</h1>
+<!-- form_with部分 -->
+<%= form_with model:@genre,url: admin_genres_path local:true do |f| %>
+
+ <h4>ジャンル名</h4>
+ <%= f.text_field :name %>
+
+<%= f.submit '新規登録' %>
+
+<% end %>
