--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,10 +1,20 @@
 <h1>ジャンル一覧・追加</h1>
 <!-- form_with部分 -->
-<%= form_with model:@genre,url: admin_genres_path local:true do |f| %>
+<%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
 
  <h4>ジャンル名</h4>
  <%= f.text_field :name %>
 
-<%= f.submit '新規登録' %>
+ <%= f.submit '新規登録' %>
+ 
+<% end %>
+
+<tbody>
+<% @genres.each do |genre| %>
+
+<tr>
+ <td><%= genre.name %></td>
+
+</tr>
 
 <% end %>
