--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -16,7 +16,7 @@
 
 <tr>
  <td><%= genre.name %></td>
- <td><%= link_to "編集する", edit_admin_genre_path(genre) %></td>
+ <td><%= link_to "edit", edit_admin_genre_path(genre) %></td>
 
 </tr>
 
