--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_with model: @customer, url: customer_registration_path, local: true do |f| %>
+<%= form_with model: @admin, url: admin_registration_path, local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
     <%= f.label :名前 %><br />
@@ -14,7 +14,7 @@
   
   <div class="field">
     <%= f.label :名前（カナ） %><br />
-    <%= f.text_field :kana_fast_name, autofocus: true %>
+    <%= f.text_field :kana_first_name, autofocus: true %>
   </div>
   
   <div class="field">
