--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,38 +25,41 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
             <% if admin_signed_in? %>
-           <%= link_to root_path do%>
-            <span class="fas fa-home">Home</span>
+           <%= link_to admin_items_index_path do%>
+            <span class="fas fa-home">商品一覧</span>
            <% end %>
            <%= link_to public_homes_about_path do%>
-            <span class="fas fa-users">About</span>
+            <span class="fas fa-users">会員一覧</span>
            <% end %>
-           <%= link_to public_cart_items_index_path do%>
-            <span class="fas fa-book-open">cart</span>
+           <%= link_to public_orders_index_path do%>
+            <span class="fas fa-book-open">注文履歴一覧</span>
+           <% end %>
+        　 <%= link_to admin_genres_path do%>
+            <span class="fas fa-book-open">ジャンル一覧</span>
            <% end %>
            <%= link_to destroy_admin_session_path, method: :delete do%>
             <span class="fas fa-sign-out-alt">Logout</span>
            <% end %>
-           
+
            <% elsif customer_signed_in? %>
             <li id="youkoso">ようこそ、<%= current_customer.last_name %>さん！</li>
             <li><%= link_to public_customers_show_path do %><i class="fas fa-user"></i>マイページ<% end %></li>
             <li><%= link_to public_items_index_path do %><i class="fas fa-cookie-bite"></i>商品一覧<% end %></li>
             <li><%= link_to public_cart_items_index_path do %><div class="fas fa-icon-flex"><%= current_customer.carts.count %></i></div><i class="cart">カート</i><% end %></li>
             <li><%= link_to destroy_customer_session_path, method: :delete do %><i class="fas fa-sign-out-alt"></i>ログアウト<% end %></li>
-           <%#= image_tag "cake.gif", :size =>'80x80' %>
+
           <% else %>
-           <%= link_to root_path do%>
-            <span class="fas fa-home">Home</span>
-           <% end %>
            <%= link_to public_homes_about_path do%>
-            <span class="fas fa-link">About</span>
+            <span class="fas fa-home">About</span>
+           <% end %>
+           <%= link_to public_items_index_path do%>
+            <span class="fas fa-link">商品一覧</span>
            <% end %>
            <%= link_to new_customer_registration_path do%>
-            <span class="fas fa-user-plus">sign up</span>
+            <span class="fas fa-user-plus">新規登録</span>
            <% end %>
            <%= link_to new_customer_session_path do%>
-            <span class="fas fa-sign-in-alt">login</span>
+            <span class="fas fa-sign-in-alt">ログイン</span>
            <% end %>
            <% end %>
         </ul>
