[Update]商品関連ページ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
             <% if admin_signed_in? %>
-           <%= link_to admin_items_index_path do%>
+           <%= link_to admin_items_path do%>
             <span class="fas fa-home">商品一覧</span>
            <% end %>
-           <%= link_to public_homes_about_path do%>
+           <%= link_to admin_customers_path do%>
             <span class="fas fa-users">会員一覧</span>
            <% end %>
            <%= link_to public_orders_index_path do%>
