--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<h2>商品詳細</h2>
+<%= attachment_image_tag @item, :image, :fill, 300, 300, format: 'jpeg' %>
+
+<h3>商品名</h3>
+
+<table>
+
+<tr>
+ <td><%= @item.name %></td>
+ <td><%= @item.detail %></td>
+ <td><%= @item.genre.name %></td>
+ <td><%= @item.price %></td>
+ <td><%= @item.is_active %></td>
+ <td><%= link_to "edit", edit_admin_item_path %></td>
+</tr>
+</table>
+
+
