--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Public::Items#index</h1>
-<p>Find me in app/views/public/items/index.html.erb</p>
+<h1>商品一覧</h1>
+
+<table>
+ <% @items.each do |item| %>
+
+<tr>
+ <td><%= attachment_image_tag @item, :image, :fill, 100, 100, format: 'jpeg' %></td>
+ <td><%= item.name %></td>
+ <td><%= item.genre %></td>
+</tr>
+
+<% end %>
+</table>
