--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Admin::Orders#index</h1>
-<p>Find me in app/views/admin/orders/index.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <h2>注文履歴一覧</h2>
+  </div>
+
+  <div class="row mt-1">
+    <table class="table table-hover text-center">
+      <thead>
+        <tr>
+          <th>購入日時</th>
+          <th>購入者</th>
+          <th>注文個数</th>
+          <th>注文ステータス</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @orders.each do |order| %>
+          <th>
+            <td><%= link_to order.created_at.strftime("%Y/%m/%d %H:%M:%S"),admin_orders_show_path(order) %></td>
+            <td>
+              <%= order.customer.last_name %>
+              <%= order.customer.first_name %>
+            </td>
+            <td><%= order.order_details.quantity %></td>
+            <td><%= order.order_status %></td>
+          </th>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
