--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
            <%= link_to admin_items_index_path do%>
             <span class="fas fa-home">商品一覧</span>
            <% end %>
-           <%= link_to public_homes_about_path do%>
+           <%= link_to admin_customers_path do%>
             <span class="fas fa-users">会員一覧</span>
            <% end %>
-           <%= link_to public_orders_index_path do%>
+           <%= link_to admin_orders_path do%>
             <span class="fas fa-book-open">注文履歴一覧</span>
            <% end %>
         　 <%= link_to admin_genres_path do%>
