[add]商品編集画面

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,22 +1,68 @@
-<h1>ジャンル一覧・追加</h1>
-<%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
+<div class="conrainer">
+  
+  <div class="row">
+      <p class="col-4 fs-5 bg-light">ジャンル一覧・追加</p>
+    </div>
+    
+    <div class="field">
+        <%= form_with model: @genre,url: admin_genres_path, local: true do |f| %>
+          <%= f.label:name, "ジャンル名", class: "ms-5" %>
+          <%= f.text_field :name, class: "ms-5", placeholder: "ジャンル名" %>
+          <%= f.submit "　新規登録　", class: "btn btn-sm btn-success ms-5 fs-5" %>
+        <% end %>
+      </div>
+    </div>
+    
+    
+    
+    
+    
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-3">
+        <table class="table table-hover">
+          <thead class="bg-light">
+            <tr>
+              <th>ジャンル</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @genres.each do |genre| %>
+            <tr>
+              <td><%= genre.name %></td>
+              <td></td>
+              <td align="right"><%= link_to "　編集する　", edit_admin_genre_path(genre), class: "btn btn-success" %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= paginate @genres %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<h4>ジャンル名</h4>
-<%= f.text_field :name %>
+<!--<h1>ジャンル一覧・追加</h1>-->
+<!--<%#= form_with model: @genre, url: admin_genres_path, local:true do |f| %>-->
 
-<%= f.submit '新規登録' %>
+<!--<h4>ジャンル名</h4>-->
+<!--<%#= f.text_field :name %>-->
 
-<% end %>
+<!--<%#= f.submit '新規登録' %>-->
 
-<h2>ジャンル</h2>
+<!--<%# end %>-->
 
-<table>
- <% @genres.each do |genre| %>
+<!--<h2>ジャンル</h2>-->
+
+<!--<table>-->
+<!-- <%# @genres.each do |genre| %>-->
  
-<tr>
- <td><%= genre.name %></td>
- <td><%= link_to "edit", edit_admin_genre_path(genre) %></td>
-</tr> 
+<!--<tr>-->
+<!-- <td><%#= genre.name %></td>-->
+<!-- <td><%#= link_to "edit", edit_admin_genre_path(genre) %></td>-->
+<!--</tr> -->
 
-<% end %>
-</table>
+<!--<%# end %>-->
+<!--</table>-->
