--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<% @addresses.each do |address| %>
+<th>
+ <p>住所<%= address.address %></p>
+ <p>宛名<%= address.name %></p>
+ <p>郵便番号<%= address.postal_code %></p>
+</th>
+ <%= link_to "削除", public_address_path(address), method: :delete %>
+<% end %>
+
+<%= form_with model: @address, url: public_addresses_path, local: true do |f| %>
+
+  <div class="field">
+    <%= f.label :住所 %><br />
+    <%= f.text_field :address, autofocus: true %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :宛名 %><br />
+    <%= f.text_field :name, autofocus: true %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :郵便番号 %><br />
+    <%= f.text_field :postal_code, autofocus: true %>
+  </div>
+  <div><%= f.submit 'Update address' %></div>
+  <% end %>
