--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -22,14 +22,31 @@
     <%= f.label :名字（カナ）%><br />
     <%= f.text_field :kana_last_name, autofocus: true %>
   </div>
-    <%= f.label :email %><br />
+  
+  <div class="field">
+    <%= f.label :メールアドレス %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :電話番号（ハイフンなし） %><br />
+    <%= f.text_field :telephone_number, autofocus: true %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :郵便番号 %><br />
+    <%= f.text_field :postal_code, autofocus: true %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :住所 %><br />
+    <%= f.text_field :address, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
@@ -43,5 +60,7 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
-<%= render "public/customers/shared/links" %>
+<div>既に登録済みの方は</div>
+<%= link_to new_customer_session_path do%>
+<p>こちら</p>
+<% end %>
