--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,14 +25,17 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
             <% if admin_signed_in? %>
-           <%= link_to root_path do%>
-            <span class="fas fa-home">Home</span>
+           <%= link_to admin_items_path do%>
+            <span class="fas fa-home">商品一覧</span>
            <% end %>
-           <%= link_to public_homes_about_path do%>
-            <span class="fas fa-users">About</span>
+           <%= link_to admin_customers_path do%>
+            <span class="fas fa-users">会員一覧</span>
            <% end %>
-           <%= link_to public_cart_items_index_path do%>
-            <span class="fas fa-book-open">cart</span>
+           <%= link_to admin_orders_path do%>
+            <span class="fas fa-book-open">注文履歴一覧</span>
+           <% end %>
+        　 <%= link_to admin_genres_path do%>
+            <span class="fas fa-book-open">ジャンル一覧</span>
            <% end %>
            <%= link_to destroy_admin_session_path, method: :delete do%>
             <span class="fas fa-sign-out-alt">Logout</span>
