--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,13 +1,13 @@
-<%= form_with model: @address, url: customer_registration_path, local: true do |f| %>
-
+<%= form_with model: @address, url: public_address_path(@address), local: true do |f| %>
+  
   <div class="field">
     <%= f.label :住所 %><br />
     <%= f.text_field :address, autofocus: true %>
   </div>
   
   <div class="field">
-    <%= f.label :電話番号 %><br />
-    <%= f.text_field :telephone_number, autofocus: true %>
+    <%= f.label :宛名 %><br />
+    <%= f.text_field :name, autofocus: true %>
   </div>
   
   <div class="field">
