--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,12 +1,3 @@
-<% @addresses.each do |address| %>
-<th>
- <p>住所<%= address.address %></p>
- <p>宛名<%= address.name %></p>
- <p>郵便番号<%= address.postal_code %></p>
-</th>
- <%= link_to "削除", public_address_path(address), method: :delete %>
-<% end %>
-
 <%= form_with model: @address, url: public_addresses_path, local: true do |f| %>
 
   <div class="field">
@@ -23,5 +14,32 @@
     <%= f.label :郵便番号 %><br />
     <%= f.text_field :postal_code, autofocus: true %>
   </div>
-  <div><%= f.submit 'Update address' %></div>
+  <div><%= f.submit '新規登録' %></div>
   <% end %>
+  
+<div class = "row mt-4">
+  <div class = "col-sm-5">
+    <table class = "hyou">
+        <tbody align="center">
+            <tr>
+              <td>郵便番号</td>
+              <td>住所</td>
+              <td>宛名</td>
+              <td></td>
+            </tr>
+            <% @addresses.each do |address| %>
+            <tr>
+              <td><%= address.postal_code %></td>
+              <td><%= address.address %></td>
+              <td><%= address.name %></td>
+              <td>
+                <%= link_to "編集", edit_public_address_path(address) %>
+                <%= link_to "削除", public_address_path(address), method: :delete %>
+              </td>
+            </tr>
+            <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
