[Update]商品＆ジャンル編集機能

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -7,6 +7,6 @@
     <p>本日の注文件数:　<%#= @order.count %>件</p>
     <br>
     <br>
-    <%#= link_to "注文履歴一覧", admin_orders_path, class:"btn btn-primary" %>
+    <%= link_to "注文履歴一覧", admin_orders_path, class:"btn btn-primary" %>
   </div>
 </div>
