--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>ジャンル編集</h1>
 
-<%= form_with model: @genre, url: edit_admin_genre_path, local:true do |f| %>
+<%= form_with model: @genre, url: admin_genre_path(@genre.id), local:true do |f| %>
 <h4>ジャンル名</h4>
 <%= f.text_field :name %>
 <%= f.submit '変更を保存' %>
