--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -2,8 +2,8 @@
   
   <div class="row justify-content-center mt-4">
     <div class="col-10 row justify-content-between">
-      <span class="bg-light font-weight-bold fs-5 col-2 text-center font-monospace pt-2">商品一覧</span>
-      <div class="fs-2 col-2"><%#= link_to "", new_admins_item_path, class:"far fa-plus-square", :style => "color: black;" %></div>
+      <span class="bg-info font-weight-bold fs-5 col-2 text-center font-monospace pt-2">商品一覧</span>
+      <div class="fs-2 col-2"><%= link_to "", new_admin_item_path, class:"far fa-plus-square", :style => "color: black;" %></div>
     </div>
   </div>
   
@@ -35,7 +35,7 @@
            <% end %>
         </tbody>
       </table>
-      <%#= paginate @item %>
+      <%#= paginate @items %>
     </div>
   </div>
 </div>
