--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,37 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+
+
+注文情報入力
+
+
+<%= form_with model: @order, url: public_orders_confirm_path, local: true do |form| %>
+
+  <b>支払方法</b>
+  <br><%= form.radio_button :payment_method, 0 %>
+  <%= form.label :payment_method, "クレジットカード", {value: 0} %>
+  <br><%= form.radio_button :payment_method, 1 %>
+  <%= form.label :payment_method, "銀行振込", {value: 1} %><br>
+
+
+  <b>お届け先</b>
+
+  <br><%= form.radio_button :customer_address, 0 %>
+  <%= form.label :customer_address,"ご自身の住所" %>
+  <br>
+   &#12306;<%= "#{current_customer.postal_code} #{current_customer.address}" %><br>
+  <%= "#{current_customer.last_name} #{current_customer.first_name}" %>
+
+  <br><%= form.radio_button :customer_address, 1 %>
+  <%= form.label :customer_address,"登録済み住所から選択" %>
+  <br>
+  <!--配送先をマージ後試す-->
+ <%#= form.collection_select(:where, @addresses, :id, :place) %>
+
+
+  <br><%= form.radio_button :customer_address, 2 %>
+  <%= form.label :customer_address,"新しいお届け先" %>
+  <br>
+  郵便番号(ハイフンなし)<%= form.text_field :postal_code, placeholder: "0000000", class:"mb-1" %><br>
+  住所<%= form.text_field :address, placeholder: "東京都渋谷区代々木神園町0-0", class:"mb-1" %><br>
+  宛名<%= form.text_field :name, placeholder: "令和道子", class:"mb-1" %>
+  <%= form.submit '確認画面へ進む', style: "text-align:center;", class: "btn btn-sm btn-primary" %>
+<% end %>
