--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
            <% elsif customer_signed_in? %>
              <span class="">ようこそ、<%= current_customer.last_name %>さん！</span>
 
-            <%= link_to public_customers_show_path do %>
+            <%= link_to public_customer_path(current_customer) do %>
              <span class="fas fa-user ">マイページ</span>
             <% end %>
 
