--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー情報</h1>
+<h1>ユーザ情報</h1>
 <div>
   <td class = "hutomozi">登録情報<td>
     <td><%= link_to "編集する", edit_public_customer_path(@customer) %>
