--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row justify-content-center mt-4">
     <div class="col-10 row justify-content-between">
       <span class="bg-light font-weight-bold fs-5 col-2 text-center font-monospace pt-2">商品一覧</span>
-      <div class="fs-2 col-2"><%#= link_to "", new_admins_item_path, class:"far fa-plus-square", :style => "color: black;" %></div>
+      <div class="fs-2 col-2"><%= link_to "", new_admin_item_path, class:"far fa-plus-square", :style => "color: black;" %></div>
     </div>
   </div>
   
