--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -7,7 +7,7 @@
       </h4>
   </div>
 
-  <%= form_with model:@customer,url: admin_customers_path(@customer), local:true do |f|%>
+  <%= form_with model:@customer,url: admin_customer_path(@customer), local:true do |f|%>
       <div class="row justify-content-center mt-5">
         <div class="col-sm-6">
 
