--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
            <% elsif customer_signed_in? %>
              <span class="">ようこそ、<%= current_customer.last_name %>さん！</span>
 
-            <%= link_to public_customers_show_path do %>
+            <%= link_to public_customer_path(current_customer) do %>
              <span class="fas fa-user ">マイページ</span>
             <% end %>
 
@@ -59,8 +59,7 @@
             <%= link_to destroy_customer_session_path, method: :delete do %>
             <span class="fas fa-sign-out-alt">ログアウト</span>
             <% end %>
-=======
-            
+
           <% else %>
            <%= link_to public_homes_about_path do%>
             <span class="fas fa-home">About</span>
