--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -44,7 +44,7 @@
 
 </div>
       <!-- カートに入れるボタン -->
-               <%= form_with model:@cart, url:cart_items_path, local:true do |f| %>
+               <%= form_with model:@cart_item, url:public_cart_item_path(@cart_item.id), local:true do |f| %>
             <%= f.number_field :quantity, min:1, placeholder: "個数選択" %>個
             <%= f.hidden_field :item_id, :value => @item.id %>
             <%= f.submit "カートに入れる", class: "btn btn-outline-danger" %>
