--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,15 @@
-<h1>ホームページ</h1>
+<div class="haikei">
+    <div class="container takasa">
+      <div class="row">
+          <tbody align="center">
+              <div>
+                <h2 class = "top">ようこそ、ながのCAKEへ！<br>
+                   このサイトは、ケーキ販売のECサイトになります。<br>
+                   会員ではない方も商品の閲覧はできますが、<br>
+                   購入には会員登録が必要となります。</h2>
+                </div></div>
+               </div>
+          </tbody>
+      </div>
+    </div>
+</div>
