--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,3 +1,4 @@
+<div class="haikei">
 <div class="container my-5">
     <div class="row">
       <div class="offset-1">
@@ -70,3 +71,4 @@
       </div>
     </div>
 </div>
+<div class="haikei">
