--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="haikei">
 <h1>会員情報</h1>
 <div class="container my-5">
   <div class="row pl-5">
@@ -39,10 +40,10 @@
         </div>
          <div class="row justify-content-center mt-5">
           <div class="col-sm-3">
-            <%= f.submit :変更を保存, class: "btn btn-success" %>
+            <%= f.submit :変更を保存, class: "btn btn-success" %><button type="button" class="btn btn-danger"><%= link_to "退会", public_confirm_unsubscribe_path(current_customer) %></button>
           </div>
         </div>
       </div>
   <% end %>
 </div>
-<%= link_to "退会", public_customers_hide_path(current_customer), method: :patch, "data-confirm" => "本当に退会しますか？", class: "btn btn-outline-danger" %>
+
