--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,16 @@
-<h1>店舗詳細画面</h1>
+<div class="haikei">
+<div class="container takasa">
+  <div class="row">
+      <tbody class="about" align="center">
+   <h3>ながのCAKEは全国発送可能なケーキ屋さんです</h3>
+   <h3>お子様からお年寄りの方までお召し上がりいただけるよう、</h3>
+   <h3>さまざまなバリエーションをご用意しております。</h3>
+   <h3>また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</h3>
+   <h3>ぜひご注文ください</h3>
+   </tbody>
+  <div class="col-xs-3 sidebar">
+      
+    </div>
+  </div>
+</div>
+</div>
