--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,3 +1,4 @@
+<div class="haikei">
 <div class="container my-5">
   <div class="row pl-5">
       <h4 class = "bg-light">商品詳細</h2>
@@ -44,4 +45,5 @@
           </table>
       </div>
   </div>
+</div>
 </div>
