--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
 
   <body>
     <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-light" style="background-color: #5f3830;">
     <div class="container">
 
           <%= link_to root_path do%>
-           <span class="navbar-brand">長野cake</span>
+           <span class="navbar-expand">長野cake</span>
           <% end %>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
