--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -33,5 +33,5 @@
   郵便番号(ハイフンなし)<%= form.text_field :postal_code, placeholder: "0000000", class:"mb-1" %><br>
   住所<%= form.text_field :address, placeholder: "東京都渋谷区代々木神園町0-0", class:"mb-1" %><br>
   宛名<%= form.text_field :name, placeholder: "令和道子", class:"mb-1" %>
-  <%= form.submit '確認画面へ進む', style: "text-align:center;", class: "btn btn-sm btn-primary" %>
+  <%= form.submit '注文確定', style: "text-align:center;", class: "btn btn-sm btn-primary" %>
 <% end %>
