--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -41,7 +41,7 @@
         </div>
 
         <div class="row mt-5">
-          <%= submit_tag "確認画面へ進む", class: "btn btn-outline-danger ml-auto" %>
+          <%= submit_tag "注文確定", class: "btn btn-outline-danger ml-auto" %>
         </div>
       <% end %>
 
