--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -48,7 +48,18 @@
           <%= f.text_field :email, class: "form-control col-sm-8" %>
         </div>
 
-        <!--会員ステータス不明-->
+        <div class="form-group row">
+          
+          <div class="col-3"></div>
+           <div class="col-2 fs-5">
+          <div  class="col-1">
+           <%= f.radio_button :is_active, "退会",checked: true %>
+           <%= f.label :is_active, "退会", value: :true %></div>
+        </div>
+          <div  class="field">
+           <%= f.radio_button :is_active, :false %>
+           <%= f.label :is_active, "有効",value: :false %>
+          </div>
 
          <div class="row justify-content-center mt-5">
           <div class="col-sm-3">
