--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -33,7 +33,7 @@
                 <td class="align-middle" style="width: 130px;">
 
 
-                  <%= form_with model:@cart_items, url:public_cart_items_path(cart_item) do |f| %>
+                  <%= form_with model:cart_item, url:public_cart_items_path(cart_item) do |f| %>
                   <div class="row">
                     <%= f.number_field :quantity, min:1,class: "col-6" %>
                     <%= f.submit "変更", class: "btn btn-sm btn-outline-danger offset-1 col-4" %>
