--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -49,7 +49,7 @@
         </div>
 
         <div class="form-group row">
-          
+          <%=f.label:"会員ステータス"%>
           <div class="col-3"></div>
            <div class="col-2 fs-5">
           <div  class="col-1">
