--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
 
   <body>
     <header>
-  <nav class="navbar navbar-expand navbar-light" style="background-color: #5f3830;">
+  <nav class="navbar navbar-expand navbar-light" style="background-color: #402717;">
     <div class="container">
           <%= link_to root_path do%>
 
-           <span class="navbar-expand">長野cake</span>
+           <span class="navbar-brand"><%= image_tag '1.png', size: '50x50' %></span>
 
           <% end %>
 
