--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,18 +1,21 @@
+<div class="shinzi">
 <%= form_with model: @address, url: public_address_path(@address), local: true do |f| %>
-  
+
+
   <div class="field">
     <%= f.label :住所 %><br />
     <%= f.text_field :address, autofocus: true %>
   </div>
-  
+
   <div class="field">
     <%= f.label :宛名 %><br />
     <%= f.text_field :name, autofocus: true %>
   </div>
-  
+
   <div class="field">
     <%= f.label :郵便番号 %><br />
     <%= f.text_field :postal_code, autofocus: true %>
   </div>
   <div><%= f.submit 'Update address' %></div>
   <% end %>
+</div>
