--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="haikei">
+<div class="shinzi">
 <h1>会員情報</h1>
 <div class="container my-5">
   <div class="row pl-5">
@@ -46,4 +46,4 @@
       </div>
   <% end %>
 </div>
-
+</div>
