--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,4 +1,4 @@
-
+<div class="shinzi">
   <h1>ユーザ情報</h1>
 <div>
   <td class = "hutomozi">登録情報<td>
@@ -54,4 +54,5 @@
     <td><button type="button" class="btn btn-success"><%= link_to "一覧を見る", public_addresses_path %></button>
     </td>
     </tr>
+  </div>
   </div>
